src/test/deca/context/invalid/fields/selection_on_float.deca
// Description :
//    Sélection de champ sur une expression de type float.
//
// Resultats :
//    Erreur contextuelle
//    Ligne <No_de_ligne> : <message d'erreur de votre compilateur>

{
    float x = 1.0;
    int y = x.z;
}

